tests/ui/crashes/ice-3891.stderr
error: invalid suffix `x` for integer literal
  --> $DIR/ice-3891.rs:2:5
   |
LL |     1x;
   |     ^^ invalid suffix `x`
   |
   = help: the suffix must be one of the integral types (`u32`, `isize`, etc)

error: aborting due to previous error

